--- a/style.css
+++ b/style.css
@@ -16,15 +16,16 @@ body{
 .bg_aqua{background-color: rgb(169, 255, 255);}
 .uppercase{text-transform: uppercase;padding: 20px;}
 .italic{font-style: italic;}
+.align_center{text-align: center;}
 #div1{
     display: flex;
     justify-content: space-between;
 }
 #tag1{
-    width: 400px;
+    width: 500px;
     border-radius: 40px;
-    text-align: center;
     margin-top: 20px;
+    height: 80px;
     left: 20%;
     top: 20px ;
     position: absolute;
@@ -34,7 +35,6 @@ body{
     border-radius: 40px;
     padding-top: 20px;
     line-height: 40px;
-    text-align: center;
     margin-top: 20px;
     height: 150px;
     
@@ -44,7 +44,6 @@ body{
     border-radius: 40px;
     padding-top: 20px;
     line-height: 40px;
-    text-align: center;
     margin-top: 20px;
 }
 #circle{
@@ -84,7 +83,6 @@ body{
     max-width: 500px;
     margin: 10px auto;
     border-radius: 40px;
-    text-align: center;
     position: relative;
 }
 .div2{
@@ -96,7 +94,6 @@ body{
 }
 .box{
     width: 350px;
-    text-align: center;
     margin:20px auto;
     border-radius: 30px;
 }
@@ -107,7 +104,6 @@ body{
     padding: 20px 40px;
     line-height: 20px;
 }
-
 #flex{
     display: flex;
     flex-direction: row;
